adding search filter data type; undone

--- a/geonode/templates/search/_search_content.html
+++ b/geonode/templates/search/_search_content.html
@@ -30,6 +30,9 @@
             {% if SEARCH_FILTERS.H_KEYWORDS_ENABLED %}
               {% include "search/_h_keywords_filter.html" %}
             {% endif %}
+            {% if SEARCH_FILTERS.DATATYPE_ENABLED %}
+              {% include "search/_datatype_filter.html" %}
+            {% endif %}
             {% if SEARCH_FILTERS.T_KEYWORDS_ENABLED %}
               {% include "search/_t_keywords_filter.html" %}
             {% endif %}
