--- a/geonode/templates/search/_datatype_filter.html
+++ b/geonode/templates/search/_datatype_filter.html
@@ -2,11 +2,11 @@
 
 <nav class="filter" ng-cloak>
     <h4><a href="#" class="toggle toggle-nav"><i class="fa fa-chevron-right"></i> {% trans "Data Type" %}</a></h4>
-    <ul class="nav closed" id="datatype">
+    <ul class="nav closed" id="datatypes">
     {% verbatim %}
-    <li ng-repeat="data in datatype" ng-if="datatype.count > 0">
-      <a data-value="{{ data.gn_description }}" data-filter="data__gn_description__in" ng-click="multiple_choice_listener($event)" class="{{data.active}}">{{ data.gn_description }}
-        <span class="badge pull-right">{{ data.count }}</span>
+    <li ng-repeat="datatype in datatypes" ng-if="datatype.layers_count > 0">
+      <a data-value="{{ datatype.identifier }}" data-filter="datatype__identifier__in" title="{{ datatype.gn_description }}"ng-click="multiple_choice_listener($event)" class="{{datatype.active}}">{{ datatype.gn_description }}
+        <span class="badge pull-right">{{ datatype.layers_count }}</span>
       </a>
     </li>
     {% endverbatim %}
