redesign font color style

--- a/geonode/static/geonode/css/base.css
+++ b/geonode/static/geonode/css/base.css
@@ -4084,6 +4084,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   display: block;
   padding: 10px 15px;
+  color: #c51f24 !important;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
