--- a/geonode/documents/templates/documents/document_upload_base.html
+++ b/geonode/documents/templates/documents/document_upload_base.html
@@ -11,9 +11,9 @@
 {% block body_outer %}
 <div class="page-header">
   <a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}" class="btn btn-primary pull-right">{% trans "Explore Documents" %}</a>
-  <h2 class="page-title">{% trans "Upload Documents" %}</h2>
-	<p>{% trans "Allowed document types" %}:</p>
-	<p>
+  <h2 class="page-title">{% trans "Upload Documents/Raw Data" %}</h2>
+	<p>{% trans "Allowed raw data types" %}:</p>
+	<p class="allowed_doctype">
 	{% for doc in ALLOWED_DOC_TYPES %}
 		<span class="label label-default">.{{ doc }}</span>
 	{% endfor %}
