--- a/geonode/documents/templates/layouts/doc_panels.html
+++ b/geonode/documents/templates/layouts/doc_panels.html
@@ -579,6 +579,11 @@ span.grippy::after {
       }
       $("#category_form").selectpicker('refresh');
     });
+
+    var selected_category = {{ category_form.initial }};
+    $.each(selected_category, function(i,e) {
+        $("#category_form option[value=" + e + "]").prop("selected", true);
+    });
   })
 
 </script>
