--- a/geonode/templates/search/_general_filters.html
+++ b/geonode/templates/search/_general_filters.html
@@ -7,7 +7,7 @@
     {% verbatim %}
       <li ng-repeat="category in categories" ng-if="category.layers_count > 0">
         <a data-value="{{ category.identifier }}" data-filter="category__identifier__in" title="{{ category.gn_description }}"
-         ng-click="multiple_choice_listener($event)" class="{{category.active}}"><div class="fa-stack fa-1g"><i class="fa fa-square-o fa-stack-2x"></i><i class="fa {{category.fa_class}} fa-stack-1x"></i></div>{{ category.gn_description | limitTo: 20 }}{{ category.gn_description.length > 20 ? '...' : ''}}
+         ng-click="multiple_choice_listener($event)" class="{{category.active}}"><div class="fa-stack fa-1g"><i class="fa {{category.fa_class}} fa-stack-1x"></i></div>{{ category.gn_description | limitTo: 20 }}{{ category.gn_description.length > 20 ? '...' : ''}}
           <span class="badge pull-right">{{ category.layers_count }}</span>
         </a>
       </li>
@@ -16,7 +16,7 @@
     {% verbatim %}
       <li ng-repeat="category in categories" ng-if="category.count > 0">
         <a data-value="{{ category.identifier }}" data-filter="category__identifier__in" title="{{ category.gn_description }}"
-         ng-click="multiple_choice_listener($event)" class="{{category.active}}"><div class="fa-stack fa-1g"><i class="fa fa-square-o fa-stack-2x"></i><i class="fa {{category.fa_class}} fa-stack-1x"></i></div>{{ category.gn_description | limitTo: 20 }}{{ category.gn_description.length > 20 ? '...' : ''}}
+         ng-click="multiple_choice_listener($event)" class="{{category.active}}"><div class="fa-stack fa-1g"><i class="fa {{category.fa_class}} fa-stack-1x"></i></div>{{ category.gn_description | limitTo: 20 }}{{ category.gn_description.length > 20 ? '...' : ''}}
           <span class="badge pull-right">{{ category.count }}</span>
         </a>
       </li>
