--- a/geonode/client/templates/leaflet/maps/map_list.html
+++ b/geonode/client/templates/leaflet/maps/map_list.html
@@ -11,6 +11,7 @@
   {% endif %}
   <h2>{% trans "Explore Maps" %}</h2>
 </div>
+  <i class="fa fa-angle-up" aria-hidden="true" id="jump_to_top" title="Jump to Top"></i>
   {% include "search/_search_content.html" %}
   {% include "_bulk_permissions_form.html" %}
 {% endblock %}
@@ -27,6 +28,22 @@
           SEARCH_URL = '{% url 'api_dispatch_list' api_name='api' resource_name='maps' %}';
       {% endif %}
       FILTER_TYPE = 'map';
+
+    $(function() {
+      $('#jump_to_top').hide();
+      $(window).scroll(function() {
+          if ($(document).scrollTop() > 700) {
+            $('#jump_to_top').show();
+            $('#jump_to_top').animate({ scrollTop: 0 }, 'fast');
+          }
+          else {
+            $('#jump_to_top').hide();
+          }
+      });
+      $("#jump_to_top").click(function() {
+        $('html, body').animate({ scrollTop: 0 }, 'fast');
+      });
+    });
   </script>
   {% with include_spatial='true' %}
   {% include 'search/search_scripts.html' %}
