--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -626,7 +626,12 @@
                 <div class="modal-body">
                     <div class="progress" id="prog-doc">
                       <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0%">
-                        {% trans "Grab your favourite snack, coffee, or tea while waiting :)" %}
+                        {% if user.is_authenticated %}
+                        {% firstof user.first_name user.username as callme %}
+                        {% blocktrans %}
+                            Hi, {{ callme }}! Grab your favourite snack, coffee, or tea while waiting :)
+                        {% endblocktrans %}
+                        {% endif %}
                       </div>
                       <br><div class="remaining-text" id="remaining" style="text-align:center;width: 100%;"></div>
                     </div>
