adding FAQs page and change the default session timeout to 3 days

--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -356,6 +356,12 @@
           </li>
 
           <li>
+              {% if user.is_authenticated %}
+                <a href="{% url "faq" %}">{% trans "FAQs" %}</a>
+              {% endif %}
+          </li>
+
+          <li>
               <a target="_blank" href="https://kms.wri-indonesia.id">KMS</a>
           </li>
 
