fixing displaying data when updating metadata

--- a/geonode/templates/metadata_base.html
+++ b/geonode/templates/metadata_base.html
@@ -230,9 +230,7 @@
     <!-- Doc & Examples: http://dbrekalo.github.io/fastselect/ -->
     <script type="text/javascript">
         $(document).ready(function() {
-            var defaultRegion = "1";
-            $('#id_resource-regions').val(defaultRegion);
-            $('#id_resource-regions').fastselect();
+            $('#id_resource-regions').fastselect({});
         });
     </script>
 
