--- a/geonode/layers/templates/layers/layer_metadata_advanced.html
+++ b/geonode/layers/templates/layers/layer_metadata_advanced.html
@@ -124,7 +124,7 @@
               <div class="col-md-6">
                 <label class="fancy-checkbox">
                     <input type="checkbox" name="category_choice_field" value="{{ choice.0 }}"
-                      {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %} />
+                      {% if choice.0 in category_form.initial %} checked="checked" {% endif %} />
                     {{ choice.1 }}
                 </label>
               </div>
