--- a/geonode/templates/metadata_detail.html
+++ b/geonode/templates/metadata_detail.html
@@ -48,12 +48,12 @@
 
         {% if resource.abstract %}
         <dt>{% trans "Abstract" %}</dt>
-        <dd>{{ resource.abstract|safe|escape|urlize|linebreaks|safe|truncatechars:1000 }}</dd>
+        <dd>{{ resource.abstract|escape|urlize|linebreaks|safe|truncatechars:1000 }}</dd>
         {% endif %}
         
         {% if resource.data_description %}
         <dt>{% trans "Data Description" %}</dt>
-        <dd>{{ resource.data_description|safe|escape|urlize|linebreaks|safe|truncatechars:1000 }}</dd>
+        <dd>{{ resource.data_description|linebreaks|safe|escape|truncatechars:1000 }}</dd>
         {% endif %}
 
         {% if resource.date_content %}
@@ -80,7 +80,7 @@
 
         {% if resource.source %}
         <dt>{% trans "Source" %}</dt>
-        <dd>{{ resource.source }}</dd>
+        <dd>{{ resource.source|safe|urlize }}</dd>
         {% endif %}
 
 
@@ -141,7 +141,7 @@
         {% endif %}
 
         <dt>{% trans "DOI" %}</dt>
-        <dd>{{ resource.doi }}</dd>
+        <dd>{{ resource.doi|safe|escape }}</dd>
 
         <dt>{% trans "Author" %}</dt>
         <dd>{{ resource.author }}</dd>
@@ -257,7 +257,7 @@
 
         {% if resource.purpose %}
         <dt>{% trans "Purpose" %}</dt>
-        <dd>{{ resource.purpose|safe|escape|urlize|linebreaks|safe|truncatechars:160 }}</dd>
+        <dd>{{ resource.purpose|escape|urlize|linebreaks|safe|truncatechars:160 }}</dd>
         {% endif %}
 
         {% if resource.language %}
