--- a/geonode/templates/metadata_detail.html
+++ b/geonode/templates/metadata_detail.html
@@ -244,9 +244,9 @@
         {% if resource.restriction_code_type or resource.constraints_other %}
         <dt>{% trans "Restrictions" %}</dt>
         <dd>{% if resource.constraints_other %}
-            {{ resource.constraints_other|safe }}
+            {{ resource.constraints_other|safe|escape }}
             {% else %}
-            {{ resource.restriction_code_type }}
+            {{ resource.restriction_code_type|safe|escape }}
             {% endif %}</dd>
         {% endif %}
 
@@ -272,7 +272,7 @@
 
         {% if resource.data_quality_statement %}
         <dt>{% trans "Data Quality" %}</dt>
-        <dd>{{ resource.data_quality_statement|safe }}</dd>
+        <dd>{{ resource.data_quality_statement|safe|escape }}</dd>
         {% endif %}
 
         {% if resource.spatial_representation_type %}
