--- a/geonode/documents/templates/documents/document_remove.html
+++ b/geonode/documents/templates/documents/document_remove.html
@@ -5,8 +5,8 @@
 
 {% block body %}
 <div class="page-header">
-  <a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}" class="btn btn-info pull-right" style="font-size: 22px;">{% trans "Explore Documents" %}</a>
-  <h2 class="page-title">{% trans "Remove Document" %}</h2>
+  <a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}" class="btn btn-info pull-right" style="font-size: 22px;">{% trans "Explore BigTIFF/Non-Spatial Data" %}</a>
+  <h2 class="page-title">{% trans "Remove BigTIFF/Non-Spatial Data" %}</h2>
 </div>
 <div class="row">
   <div class="col-md-6">
