--- a/geonode/documents/templates/documents/document_detail.html
+++ b/geonode/documents/templates/documents/document_detail.html
@@ -59,9 +59,9 @@
             </a>
         </div>
       {% elif resource.doc_file %}
-      <p><a href="{% url "document_link" resource.id %}" target="_blank">{% trans "Download the" %} {{ resource }} {% trans "document" %}</a></p>
+      <p><a href="{% url "document_link" resource.id %}" target="_blank">{% trans "Download the" %} {{ resource }} {% trans "BigTIFF/Non-Spatial Data" %}</a></p>
       {% elif  resource.doc_url %}
-      <p><a href="{{ resource.doc_url }}" target="_blank">{% trans "Download the" %} {{ resource }} {% trans "document" %}.</a> <small>({% trans 'External Resource' %})</small></p>
+      <p><a href="{{ resource.doc_url }}" target="_blank">{% trans "Download the" %} {{ resource }} {% trans "BigTIFF/Non-Spatial Data" %}.</a> <small>({% trans 'External Resource' %})</small></p>
       {%  endif %}
     {%  endif %}
 
@@ -90,7 +90,7 @@
       <article id="rate" class="tab-pane">
         <!-- TODO: Move this to a reusable template snippet -->
         {% if request.user.is_authenticated %}
-        <h4>{% trans "Rate this document" %}</h4>
+        <h4>{% trans "Rate this BigTIFF/Non-Spatial Data" %}</h4>
         {% user_rating request.user resource "document" as user_document_rating %}
         <div id="user_rating" class="category-layer" data-score="{{user_document_rating}}"></div>
         {% endif %}
@@ -129,11 +129,11 @@
       <li class="list-group-item">
       {% if "download_resourcebase" in perms_list %}
         {% if resource.extension|lower in imgtypes and resource.doc_file %}
-          <a style="text-decoration:none;" target="_blank" href="{% url "document_download" resource.id %}"><button class="btn btn-primary btn-md btn-block">{% trans "Download Document" %}</button></a>
+          <a style="text-decoration:none;" target="_blank" href="{% url "document_download" resource.id %}"><button class="btn btn-primary btn-md btn-block">{% trans "Download BigTIFF/Non-Spatial Data" %}</button></a>
         {% elif resource.doc_file %}
-          <a style="text-decoration:none;" target="_blank" href="{% url "document_download" resource.id %}"><button class="btn btn-primary btn-md btn-block">{% trans "Download Document" %}</button></a>
+          <a style="text-decoration:none;" target="_blank" href="{% url "document_download" resource.id %}"><button class="btn btn-primary btn-md btn-block">{% trans "Download BigTIFF/Non-Spatial Data" %}</button></a>
         {% elif  resource.doc_url %}
-          <a style="text-decoration:none;" target="_blank" href="{{ resource.doc_url }}"><button class="btn btn-primary btn-md btn-block">{% trans "Download Document" %}</button></a>
+          <a style="text-decoration:none;" target="_blank" href="{{ resource.doc_url }}"><button class="btn btn-primary btn-md btn-block">{% trans "Download BigTIFF/Non-Spatial Data" %}</button></a>
         {%  endif %}
       {% else %}
         {% if request.user.is_authenticated %}
@@ -144,7 +144,7 @@
       {% if not READ_ONLY_MODE %}
         {% if "change_resourcebase_metadata" in perms_list or "change_resourcebase" in perms_list or "delete_resourcebase" in perms_list %}
           <li class="list-group-item">
-            <button class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#edit-document">{% trans "Edit Document" %}</button>
+            <button class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#edit-document">{% trans "Edit BigTIFF/Non-Spatial Data" %}</button>
           </li>
         {% endif %}
       {% endif %}
@@ -161,7 +161,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title" id="myModalLabel">{% trans "Edit Document" %}</h4>
+              <h4 class="modal-title" id="myModalLabel">{% trans "Edit BigTIFF/Non-Spatial Data" %}</h4>
             </div>
             <div class="modal-body">
 
@@ -184,7 +184,7 @@
                   {% if "change_resourcebase" in perms_list or "delete_resourcebase" in perms_list %}
                   <div class="col-sm-3">
                     <i class="fa fa-file-text-o fa-3x"></i>
-                    <h4>{% trans "Document" %}</h4>
+                    <h4>{% trans "BigTIFF/Non-Spatial Data" %}</h4>
                     {% if "change_resourcebase" in perms_list %}
                     <a class="btn btn-default btn-block btn-xs" href="{% url "document_replace" resource.id %}">{% trans "Replace" %}</a>
                     {% endif %}
@@ -239,15 +239,15 @@
       </div>
 
       <li class="list-group-item">
-        <h4>{% trans "Resources using this document" %}</h4>
+        <h4>{% trans "Resources using this BigTIFF/Non-Spatial Data" %}</h4>
         {% if layer.maps %}
-        <p>{% trans "List of resources using this document:" %}</p>
+        <p>{% trans "List of resources using this BigTIFF/Non-Spatial Data:" %}</p>
         {% endif %}
         <ul class="list-unstyled">
           {% for resource in related %}
           <li><a href="{{ resource.get_absolute_url }}">{{ resource.title }}</a></li>
           {% empty %}
-          <p>{% trans "This document is not related to any maps or layers" %}</p>
+          <p>{% trans "This BigTIFF/Non-Spatial Data is not related to any maps or layers" %}</p>
           {% endfor %}
         </ul>
       </li>
@@ -257,8 +257,8 @@
           {% if not READ_ONLY_MODE %}
             <li class="list-group-item">
               <h4>{% trans "Permissions" %}</h4>
-              <p>{% trans "Click the button below to change the permissions of this document." %}</p>
-              <p><a href="#modal_perms" data-toggle="modal" class="btn btn-primary btn-block" data-target="#_permissions">{% trans "Change Document Permissions" %}</a></p>
+              <p>{% trans "Click the button below to change the permissions of this BigTIFF/Non-Spatial Data." %}</p>
+              <p><a href="#modal_perms" data-toggle="modal" class="btn btn-primary btn-block" data-target="#_permissions">{% trans "Change BigTIFF/Non-Spatial Data Permissions" %}</a></p>
             </li>
             {% include "_permissions_form.html" %}
           {% endif %}
