--- a/geonode/documents/templates/documents/document_thumb_upload.html
+++ b/geonode/documents/templates/documents/document_thumb_upload.html
@@ -9,7 +9,7 @@
 
 {% block body_outer %}
   <div class="page-header">
-    <a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}" class="btn btn-primary pull-right">{% trans "Explore Documents" %}</a>
+    <a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}" class="btn btn-primary pull-right">{% trans "Explore BigTIFF/Non-Spatial Data" %}</a>
     <h2 class="page-title">{% trans "Upload Document's Thumbnail" %}</h2>
   </div>
 
