--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -290,16 +290,16 @@
           <li id="nav_layers">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Data" %}<i class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url "layer_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Layers" %}</a></li>
-                <li><a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Documents" %}</a></li>
+                <li><a href="{% url "layer_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Spatial" %}</a></li>
+                <li><a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "BigTIFF/Non-Spatial Data" %}</a></li>
                 <li><a href="{% url "services" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Remote Services" %}</a></li>
                 {% if user.is_authenticated and not READ_ONLY_MODE %}
                     <li role="separator" class="divider"></li>
-                    <li><a href="{% url "layer_upload" %}">{% trans "Upload Layer" %}</a></li>
+                    <li><a href="{% url "layer_upload" %}">{% trans "Upload Spatial" %}</a></li>
                     {% if USE_GEOSERVER and CREATE_LAYER %}
-                        <li><a href="{% url "layer_create" %}">{% trans "Create Layer" %}</a></li>
+                        <li><a href="{% url "layer_create" %}">{% trans "Create Spatial Layer" %}</a></li>
                     {% endif %}
-                    <li><a href="{% url "document_upload" %}">{% trans "Upload Document" %}</a></li>
+                    <li><a href="{% url "document_upload" %}">{% trans "Upload BigTIFF/Non-Spatial Data" %}</a></li>
                 {% endif %}
                 {% if user.is_superuser or user.is_staff %}
                   {%  if not READ_ONLY_MODE %}
