--- a/geonode/templates/index.html
+++ b/geonode/templates/index.html
@@ -275,7 +275,7 @@
     }
 
     $(function() {
-        searchIt(["forest", "peat", "concession", "type me!"]);
+        searchIt(["forest", "papua", "peat", "riau", "concession", "tree cover", "type me!"]);
     });
 
     FEATURED_URL = '{% url 'api_dispatch_list' api_name='api' resource_name='featured' %}'
